Fix all broken styles

--- a/app/components/auth/resetPassword/resetPassword.scss
+++ b/app/components/auth/resetPassword/resetPassword.scss
@@ -8,12 +8,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 90px auto 0 auto;
+    margin: 0 auto;
     padding-bottom: 54px;
     border-radius: 1.7px;
     background-color: white;
     border: solid 1px $space_gray16;
-    width: 403px;
   }
 }
 
